clang/test/BSC/Negative/Ownership/Borrow/borrow_func_instantiation/borrow_func_instantiation.cbs
// RUN: %clang_cc1 -verify %s

T _Borrow foo<T>(void); // expected-note {{candidate template ignored: substitution failure [with T = int *]: no _Borrow qualified type found in the function parameters, the return type is not allowed to be _Borrow qualified}}
T baz<T>(void); // expected-note {{candidate template ignored: substitution failure [with T = int *_Borrow]: no _Borrow qualified type found in the function parameters, the return type is not allowed to be _Borrow qualified}}

void bar() {
  foo<int *>(); // expected-error {{no matching function for call to 'foo'}}
  baz<int *_Borrow>(); // expected-error {{no matching function for call to 'baz'}}
}